--- a/jblog05/src/main/resources/com/douzone/jblog/config/web/fileupload.properties
+++ b/jblog05/src/main/resources/com/douzone/jblog/config/web/fileupload.properties
@@ -1,5 +1,6 @@
-fileupload.maxInMemorySize=52428800
-fileupload.maxUploadSize=1024000
-fileupload.defaultEncodin=utf-8
+fileupload.maxInMemorySize=1024000
+fileupload.maxUploadSize=52428800
+fileupload.defaultEncoding=utf-8
+
 fileupload.resourceMapping=/assets/logo/**
 fileupload.uploadLocation=/jblog-uploads/
